[package]
name = "sphinx_drm"
authors = ["smokingplaya"]
description = "DRM System, that will used to ..."
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
mac_address = "1.1.7"
once_cell = "1.19.0"
redis = "0.26.1"
reqwest = {version = "0.12.5", features = ["blocking"]}
rusqlite = "0.32.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
